// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetComponent/> Tests Render Tests should render editable sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-spin-nested-loading antv-s2-spin"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="antv-s2-wrapper"
      >
        <div
          class="s2-header"
          style="width: 200px;"
        >
          <div
            class="s2-header-heading"
          >
            <div
              class="s2-header-heading-left"
            >
              <div
                class="s2-header-heading-title"
              />
            </div>
            <div
              class="s2-header-heading-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="gap: 8px;"
              >
                <div
                  class="ant-space-item"
                  style=""
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
                    type="button"
                  >
                    <div />
                    <span>
                      行列切换
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                  style=""
                >
                  <div
                    class="antv-s2-advanced-sort"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm antv-s2-advanced-sort-btn"
                      type="button"
                    >
                      <div />
                      <span>
                        高级排序
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <a
                    class="ant-dropdown-trigger ant-dropdown-link antv-s2-export"
                  >
                    <div />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="s2-header-content"
          />
        </div>
        <div
          class="antv-s2-container"
        >
          <canvas
            height="400"
            style="width: 200px; height: 200px; display: block;"
            width="400"
          />
        </div>
        <div
          class="antv-s2-pagination"
        >
          <ul
            class="ant-pagination ant-pagination-mini"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-select-sm ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 条/页"
                  >
                    10 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
          <span
            class="antv-s2-pagination-count"
            title="共计0条"
          >
            共计 - 条
          </span>
        </div>
        <div
          class="antv-s2-drag-copy-point"
          id="spreadsheet-drag-copy-point"
          style="display: none; left: -999px; top: -999px; width: 8px;"
        >
          <div
            class="antv-s2-drag-copy-mask"
            style="inset: 0px; width: 0px; height: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render gridAnalysis sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-spin-nested-loading antv-s2-spin"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="antv-s2-wrapper"
      >
        <div
          class="s2-header"
          style="width: 200px;"
        >
          <div
            class="s2-header-heading"
          >
            <div
              class="s2-header-heading-left"
            >
              <div
                class="s2-header-heading-title"
              />
            </div>
            <div
              class="s2-header-heading-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="gap: 8px;"
              >
                <div
                  class="ant-space-item"
                  style=""
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
                    type="button"
                  >
                    <div />
                    <span>
                      行列切换
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                  style=""
                >
                  <div
                    class="antv-s2-advanced-sort"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm antv-s2-advanced-sort-btn"
                      type="button"
                    >
                      <div />
                      <span>
                        高级排序
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <a
                    class="ant-dropdown-trigger ant-dropdown-link antv-s2-export"
                  >
                    <div />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="s2-header-content"
          />
        </div>
        <div
          class="antv-s2-container"
        >
          <canvas
            height="400"
            style="width: 200px; height: 200px; display: block;"
            width="400"
          />
        </div>
        <div
          class="antv-s2-pagination"
        >
          <ul
            class="ant-pagination ant-pagination-mini"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-select-sm ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 条/页"
                  >
                    10 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
          <span
            class="antv-s2-pagination-count"
            title="共计0条"
          >
            共计 - 条
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render pivot sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-spin-nested-loading antv-s2-spin"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="antv-s2-wrapper"
      >
        <div
          class="s2-header"
          style="width: 200px;"
        >
          <div
            class="s2-header-heading"
          >
            <div
              class="s2-header-heading-left"
            >
              <div
                class="s2-header-heading-title"
              />
            </div>
            <div
              class="s2-header-heading-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="gap: 8px;"
              >
                <div
                  class="ant-space-item"
                  style=""
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
                    type="button"
                  >
                    <div />
                    <span>
                      行列切换
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                  style=""
                >
                  <div
                    class="antv-s2-advanced-sort"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm antv-s2-advanced-sort-btn"
                      type="button"
                    >
                      <div />
                      <span>
                        高级排序
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <a
                    class="ant-dropdown-trigger ant-dropdown-link antv-s2-export"
                  >
                    <div />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="s2-header-content"
          />
        </div>
        <div
          class="antv-s2-container"
        >
          <canvas
            height="400"
            style="width: 200px; height: 200px; display: block;"
            width="400"
          />
        </div>
        <div
          class="antv-s2-pagination"
        >
          <ul
            class="ant-pagination ant-pagination-mini"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-select-sm ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 条/页"
                  >
                    10 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
          <span
            class="antv-s2-pagination-count"
            title="共计0条"
          >
            共计 - 条
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render strategy sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-spin-nested-loading antv-s2-spin"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="antv-s2-wrapper"
      >
        <div
          class="s2-header"
          style="width: 200px;"
        >
          <div
            class="s2-header-heading"
          >
            <div
              class="s2-header-heading-left"
            >
              <div
                class="s2-header-heading-title"
              />
            </div>
            <div
              class="s2-header-heading-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="gap: 8px;"
              >
                <div
                  class="ant-space-item"
                  style=""
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
                    type="button"
                  >
                    <div />
                    <span>
                      行列切换
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                  style=""
                >
                  <div
                    class="antv-s2-advanced-sort"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm antv-s2-advanced-sort-btn"
                      type="button"
                    >
                      <div />
                      <span>
                        高级排序
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <a
                    class="ant-dropdown-trigger ant-dropdown-link antv-s2-export"
                  >
                    <div />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="s2-header-content"
          />
        </div>
        <div
          class="antv-s2-container"
        >
          <canvas
            height="400"
            style="width: 200px; height: 200px; display: block;"
            width="400"
          />
        </div>
        <div
          class="antv-s2-pagination"
        >
          <ul
            class="ant-pagination ant-pagination-mini"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-select-sm ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 条/页"
                  >
                    10 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
          <span
            class="antv-s2-pagination-count"
            title="共计0条"
          >
            共计 - 条
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SheetComponent/> Tests Render Tests should render table sheet by snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-spin-nested-loading antv-s2-spin"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="antv-s2-wrapper"
      >
        <div
          class="s2-header"
          style="width: 200px;"
        >
          <div
            class="s2-header-heading"
          >
            <div
              class="s2-header-heading-left"
            >
              <div
                class="s2-header-heading-title"
              />
            </div>
            <div
              class="s2-header-heading-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
                style="gap: 8px;"
              >
                <div
                  class="ant-space-item"
                  style=""
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
                    type="button"
                  >
                    <div />
                    <span>
                      行列切换
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                  style=""
                >
                  <div
                    class="antv-s2-advanced-sort"
                  >
                    <button
                      class="ant-btn ant-btn-default ant-btn-sm antv-s2-advanced-sort-btn"
                      type="button"
                    >
                      <div />
                      <span>
                        高级排序
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <a
                    class="ant-dropdown-trigger ant-dropdown-link antv-s2-export"
                  >
                    <div />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="s2-header-content"
          />
        </div>
        <div
          class="antv-s2-container"
        >
          <canvas
            height="400"
            style="width: 200px; height: 200px; display: block;"
            width="400"
          />
        </div>
        <div
          class="antv-s2-pagination"
        >
          <ul
            class="ant-pagination ant-pagination-mini"
          >
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-disabled"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-select-sm ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="10 条/页"
                  >
                    10 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
          <span
            class="antv-s2-pagination-count"
            title="共计0条"
          >
            共计 - 条
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
